src/test/ui/borrowck/borrowck-block-unint.stderr
error[E0381]: used binding `x` isn't initialized
  --> $DIR/borrowck-block-unint.rs:4:11
   |
LL |     let x: isize;
   |         - binding declared here but left uninitialized
LL |     force(|| {
   |           ^^ `x` used here but it isn't initialized
LL |         println!("{}", x);
   |                        - borrow occurs due to use in closure
   |
help: consider assigning a value
   |
LL |     let x: isize = 0;
   |                  +++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
